--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.10.0",
     "chart.js": "^4.3.0",
-    "next": "13.6.0",
+    "next": "",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   }
 }
