--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^14.3.1",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "next": "15.5",
+    "react": "19.1",
+    "react-dom": "19.1",
     "@supabase/supabase-js": "^2.24.0",
     "chart.js": "^4.5.0"
   },
