--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.24.0",
+    "@tailwindcss/cli": "^4.1.13",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.13",
+    "chart.js": "^4.5.0",
     "next": "15.5",
     "react": "19.1",
-    "react-dom": "19.1",
-    "@supabase/supabase-js": "^2.24.0",
-    "chart.js": "^4.5.0"
+    "react-dom": "19.1"
   },
   "engines": {
     "node": "22.x"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13"
   }
 }
