--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "chart.js": "^4.5.0",
+    "jspdf": "^3.0.3",
     "next": "15.5",
     "react": "19.1",
     "react-chartjs-2": "^5.3.0",
